--- a/Projet DOM 2/style.css
+++ b/Projet DOM 2/style.css
@@ -1,16 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    border-radius: 0;
     box-sizing: border-box;
     outline: none;
     border: none;
-    border-radius: 0;
     box-shadow: none;
-}
-
-@font-face {
-    font-family: 'digital';
-    src: url(fonts/digital-7.ttf);
 }
 
 body {
@@ -22,123 +17,35 @@ body {
     font-family: sans-serif;
 }
 
-.calculatrice {
-    /* background-color: #1e90ff; */
-    background-color: #222;
+.container {
+    width: 400px;
+    padding: 20px 20px;
+    gap: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 15px 10px 15px;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 5px 5px 10px #222;
 }
 
-.head-calc {
-    position: relative;
-    width: 100%;
-    z-index: 1;
-}
-
-.row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-block: 15px;
-}
-
-.ecran-solaire {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-template-rows: repeat(1);
-    background-color: #5a3a22;
-    height: 35px;
-    width: 90px;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.ecran-solaire .case:last-child, .ecran-solaire .case:nth-child(2) {
-    border-left: 1px solid rgba(0, 0, 0, .5);
-}
-
-.marque {
-    font-weight: bold;
+h1 {
+    color: #001e4d;
     pointer-events: none;
-    color: #1e90ff;
-    font-family: 'digital';
-    letter-spacing: 2px;
-    font-size: 1.1em;
+    /*color: #001e4d;*/
 }
 
-.marque span {
-    color: white;
-}
-
-.ecran {
-    background-color: #009432;
-    height: 100px;
-    width: 310px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding: 0 10px 5px 10px;
-    margin-inline: auto;
-    font-size: 2.2em;
-    margin-bottom: 20px;
-    pointer-events: none;
-    font-family: 'digital';
-    box-shadow: inset 9px 9px 9px rgba(0, 0, 0, .5);
-    overflow-x: hidden;
-}
-
-.body-calc {
+#color-box {
     width: 100%;
-    padding: 20px 0 10px 0;
+    height: 300px;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, .5);
+    background-color: #001e4d;
 }
 
-.touches {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(5, 60px);
-    gap: 10px;
-}
-
-.bouton {
-    background-color: white;
-    border-radius: 25%;
-    font-size: 1.5em;
-    color: #000;
-    cursor: pointer;
-    box-shadow: 2px 4px #4a4a4a;
-}
-
-.bouton[data-code="Equal"] {
-    grid-column: span 2;
-    background-color: #1e90ff;
-    border-radius: 10px;
-    font-weight: bold;
-    font-size: 2em;
-    color: white;
-}
-
-.bouton[data-code="keyC"] {
+#change-color-btn {
+    height: 50px;
+    width: 100%;
     background-color: #f39c12;
-    font-weight: bold;
-    font-size: 2em;
     color: white;
+    font-size: 1.2em;
+    cursor: pointer;
+    box-shadow: 0 0 2px 1px rgba(0, 0, 0, .5);
 }
-
-.bouton[data-code="NumpadDecimal"] {
-    font-weight: bold;
-    font-size: 3em;
-}
-
-.bouton:active {
-    box-shadow: 0 0 1px 1px #4a4a4a;
-    transform: translateY(2px);
-}
-
